--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angry Bird Cash</title>
     <link rel="stylesheet" href="./assets/css/page/page.css">
-    <script src="https://kit.fontawesome.com/ac1a213ded.js" crossorigin="anonymous"></script>
-
-    <!--<i class="fa-solid fa-bars"></i>-->
 </head>
 <body>
+    <header>
+        <section class="container">
+            <p class="title">
+                BIRDCASH
+            </p>
+        </section>
+    </header>
     <main>
         <section class="container1">
             <article class="container">
